--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,3 @@
-/**
-* Template Name: Gp - v4.7.0
-* Template URL: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -390,7 +383,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 24px;
 }
 #hero .icon-box {
-  padding: 30px 20px;
+  padding: 10px 5px;
   transition: ease-in-out 0.3s;
   border: 1px solid rgba(255, 255, 255, 0.3);
   height: 100%;
@@ -510,6 +503,7 @@ section {
 --------------------------------------------------------------*/
 .clients {
   padding-top: 20px;
+  display: none;
 }
 .clients .swiper-slide img {
   opacity: 0.5;
