--- a/crm1/main/templates/main/index.html
+++ b/crm1/main/templates/main/index.html
@@ -43,6 +43,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto" href="#cta">Whats New!</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Movies</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -62,7 +63,6 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li> -->
-          <li><a class="nav-link scrollto" href="#cta">Whats New!</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -180,23 +180,23 @@
           <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
             <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
               <i class="bx bx-receipt"></i>
-              <h4>Est labore ad</h4>
-              <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+              <h4>Production</h4>
+              <p>Production of record-breaking entertaining hits and genre-defining South Indian films</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bx bx-cube-alt"></i>
-              <h4>Harum esse qui</h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+              <h4>Collaborations</h4>
+              <p>Collaborations with the best of talent in the South Indian film industry</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bx bx-images"></i>
-              <h4>Aut occaecati</h4>
-              <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+              <h4>Script</h4>
+              <p>Scriptwriters with a knack to transport you to different world through immersive storytelling</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bx bx-shield"></i>
-              <h4>Beatae veritatis</h4>
-              <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+              <h4>VFC</h4>
+              <p>At VFC, we strive to set benchmarks in the way films are created, marketed, and consumed.</p>
             </div>
           </div>
         </div>
@@ -314,7 +314,7 @@
                 <p>Tamil</p>
                 <div class="portfolio-links">
                   <a href=" {% static 'assets/img/portfolio/portfolio-t.jpeg' %} " data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href=" {% static 'portfolio-details.html' %} " title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="#cta" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -328,7 +328,7 @@
                 <p>English</p>
                 <div class="portfolio-links">
                   <a href=" {% static 'assets/img/portfolio/portfolio-e.jpeg' %} " data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href=" {% static 'portfolio-details.html' %} " title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="#cta" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -342,7 +342,7 @@
                 <p>Malayalam</p>
                 <div class="portfolio-links">
                   <a href=" {% static 'assets/img/portfolio/portfolio-m.jpeg' %} " data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href=" {% static 'portfolio-details.html' %} " title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="#cta" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -414,11 +414,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src=" {% static 'assets/img/testimonials/testimonials-1.jpg' %} " class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
+                <h3>Vishnuvardhan M</h3>
                 <h4>Ceo &amp; Founder</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  The Vision of Visvaroopi is to create, promote and release content across varying genres.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -427,11 +427,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src=" {% static 'assets/img/testimonials/testimonials-2.jpg' %} " class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <h3>Santhanabalan</h3>
+                <h4>Product Manager</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  Our development team is working hard to make this Website useful to both end viewers and employee of VFC.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -440,37 +440,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src=" {% static 'assets/img/testimonials/testimonials-3.jpg' %} " class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <h3>Prasanna Raj</h3>
+                <h4>Movie reviewer</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src=" {% static 'assets/img/testimonials/testimonials-4.jpg' %} " class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src=" {% static 'assets/img/testimonials/testimonials-5.jpg' %} " class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                  Jasper Trailer shows that this movie is quite promising with its well balanced action and storyline.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -505,7 +479,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
+                <h4>Vishnuvardhan M</h4>
                 <span>Chief Executive Officer</span>
               </div>
             </div>
@@ -523,7 +497,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
+                <h4>Santhanabalan V</h4>
                 <span>Product Manager</span>
               </div>
             </div>
@@ -541,8 +515,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Vishist Raam K S.</h4>
+                <span>PRO Officer</span>
               </div>
             </div>
           </div>
@@ -559,7 +533,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Amanda Jepson</h4>
+                <h4>Ponvijay S</h4>
                 <span>Accountant</span>
               </div>
             </div>
@@ -590,19 +564,19 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>123 Gandhipuram, Coimbatore, India</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>admin@vfc.in</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+91 9876543210</p>
               </div>
 
             </div>
@@ -653,12 +627,12 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Gp<span>.</span></h3>
+              <h3>VFC<span>.</span></h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
+                123 Gandhipuram <br>
+                Coimbatore, INDIA<br><br>
                 <strong>Phone:</strong> +91 9876543210<br>
-                <strong>Email:</strong> admin@vfc.com<br>
+                <strong>Email:</strong> admin@vfc.in<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -673,19 +647,19 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">Movies</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">Short Films</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">Documentary Films</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#cta">Trailer</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#cta">Teasers</a></li>
             </ul>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <p>Subscribe to our newsletter for free!</p>
             <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
+              <input type="email" name="email" placeholder="Email address"><input type="submit" value="Subscribe">
             </form>
           </div>
 
