--- a/crm1/accounts/templates/accounts/register.html
+++ b/crm1/accounts/templates/accounts/register.html
@@ -1,126 +1,324 @@
+{% load static %}
 <!DOCTYPE html>
-<html>
-    
+<html lang="en">
+
 <head>
-	<title>Login</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<style>
-		body,
-		html {
-			margin: 0;
-			padding: 0;
-			height: 100%;
-			background: #7abecc !important;
-		}
-		.user_card {
-			width: 350px;
-			margin-top: auto;
-			margin-bottom: auto;
-			background: #74cfbf;
-			position: relative;
-			display: flex;
-			justify-content: center;
-			flex-direction: column;
-			padding: 10px;
-			box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-			-webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-			-moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-			border-radius: 5px;
+  <title>Register</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
 
-		}
+  <!-- Favicons -->
+  <link href=" {% static 'assets/img/favicon.png' %} " rel="icon">
+  <link href=" {% static 'assets/img/apple-touch-icon.png' %} " rel="apple-touch-icon">
 
-		.form_container {
-			margin-top: 20px;
-		}
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-		#form-title{
-			color: #fff;
-		}
-		.login_btn {
-			width: 100%;
-			background: #33ccff !important;
-			color: white !important;
-		}
-		.login_btn:focus {
-			box-shadow: none !important;
-			outline: 0px !important;
-		}
-		.login_container {
-			padding: 0 2rem;
-		}
-		.input-group-text {
-			background: #f7ba5b !important;
-			color: white !important;
-			border: 0 !important;
-			border-radius: 0.25rem 0 0 0.25rem !important;
-		}
-		.input_user,
-		.input_pass:focus {
-			box-shadow: none !important;
-			outline: 0px !important;
-		}
+  <!-- Vendor CSS Files -->
+  <link href=" {% static 'assets/vendor/aos/aos.css' %} " rel="stylesheet">
+  <link href=" {% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %} " rel="stylesheet">
+  <link href=" {% static 'assets/vendor/bootstrap-icons/bootstrap-icons.css' %} " rel="stylesheet">
+  <link href=" {% static 'assets/vendor/boxicons/css/boxicons.min.css' %} " rel="stylesheet">
+  <link href=" {% static 'assets/vendor/glightbox/css/glightbox.min.css' %} " rel="stylesheet">
+  <link href=" {% static 'assets/vendor/remixicon/remixicon.css' %} " rel="stylesheet">
+  <link href=" {% static 'assets/vendor/swiper/swiper-bundle.min.css' %} " rel="stylesheet">
 
-	</style>
+  <!-- Template Main CSS File -->
+  <link href=" {% static 'assets/css/style.css' %} " rel="stylesheet">
 
+  <!-- LOGIN PAGE  -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+  <style>
+	body,
+	html {
+		margin: 0;
+		padding: 0;
+		height: 100%;
+		/* background: #7abecc !important; */
+		background-image: url("/static/assets/img/loginbg.jpg");
+		background-position: center;
+	}
+	.anchor {
+		color: #ffcd6b;
+	}
+	.user_card {
+		width: 350px;
+		margin-top: auto;
+		margin-bottom: auto;
+		background: grey;
+		position: relative;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		padding: 10px;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		-webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		-moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		border-radius: 5px;
+
+	}
+
+	.form_container {
+		margin-top: 20px;
+	}
+
+	#form-title{
+		color: #fff;
+		
+	}
+
+	.login_btn {
+		width: 100%;
+		background: #ffcd6b !important;
+		color: black !important;
+	}
+	.login_btn:focus {
+		box-shadow: none !important;
+		outline: 0px !important;
+	}
+	.login_container {
+		padding: 0 2rem;
+	}
+	.input-group-text {
+		background: #ffcd6b !important;
+		color: white !important;
+		border: 0 !important;
+		border-radius: 0.25rem 0 0 0.25rem !important;
+	}
+	.input_user,
+	.input_pass:focus {
+		box-shadow: none !important;
+		outline: 0px !important;
+	}
+
+	#messages{
+		background-color: grey;
+		color: #fff;
+		padding: 10px;
+		margin-top: 10px;
+	}
+	.links{
+		color: white;
+	}
+	.footer {
+		justify-content: center;
+		padding-bottom: 50px;
+		position: relative;	
+		left: 0;
+		bottom: 0;
+		width: 100%;
+		color: white;
+		text-align: center;
+		}
+</style>
+ <!-- LOGIN PAGE end-->
 </head>
+
 <body>
-	<div class="container h-100">
-		<div class="d-flex justify-content-center h-100">
-			<div class="user_card">
-				<div class="d-flex justify-content-center">
-					<h3 id="form-title">REGISTER ACCOUNT</h3>
-				</div>
-				<div class="d-flex justify-content-center form_container">
 
-					<form method="POST" action="">
-						{% csrf_token %}
-						<div class="input-group mb-3">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-user"></i></span>
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top header-inner-pages">
+    <div class="container d-flex align-items-center justify-content-lg-between">
+
+      <h1 class="logo me-auto me-lg-0"><a href=" {% static 'index.html' %} ">VFC<span>.</span></a></h1>
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href=" {% static 'index.html' %} " class="logo me-auto me-lg-0"><img src=" {% static 'assets/img/logo.png' %} " alt="" class="img-fluid"></a>-->
+
+      <nav id="navbar" class="navbar order-last order-lg-0">
+        <ul>
+          <li><a class="nav-link scrollto " href=" {% static 'home.html#hero' %} ">Home</a></li>
+          <li><a class="nav-link scrollto" href=" {% static 'home.html#about' %} ">About</a></li>
+          <li><a class="nav-link scrollto" href=" {% static 'home.html#services' %} ">Services</a></li>
+          <li><a class="nav-link scrollto " href=" {% static 'home.html#portfolio' %} ">Portfolio</a></li>
+          <li><a class="nav-link scrollto" href=" {% static 'home.html#team' %} ">Team</a></li>
+          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a class="nav-link scrollto active" href="../main#hero">Home</a></li>
+              <li><a class="nav-link scrollto" href="../main#about">About</a></li>
+              <li><a class="nav-link scrollto" href="../main#cta">Whats New!</a></li>
+              <li><a class="nav-link scrollto " href="../main#portfolio">Movies</a></li>
+              <li><a class="nav-link scrollto" href="../main#team">Team</a></li>
+              <li><a class="nav-link scrollto" href="../main#contact">Contact</a></li>
+            </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+
+    </div>
+  </header><!-- End Header -->
+
+  <main id="main">
+
+    <!-- ======= Breadcrumbs ======= -->
+    <section class="breadcrumbs">
+      <div class="container">
+
+        <div class="d-flex justify-content-between align-items-center">
+          <h2>Register</h2>
+          <ol>
+            <li><a href="../main">Home</a></li>
+            <li>Register</li>
+          </ol>
+        </div>
+
+      </div>
+    </section><!-- End Breadcrumbs -->
+
+    <section class="inner-page">
+		<div class="container h-100">
+			<div class="d-flex justify-content-center h-100">
+				<div class="user_card">
+					<div class="d-flex justify-content-center">
+						<h3 id="form-title">REGISTER ACCOUNT</h3>
+					</div>
+					<div class="d-flex justify-content-center form_container">
+	
+						<form method="POST" action="">
+							{% csrf_token %}
+							<div class="input-group mb-3">
+								<div class="input-group-append">
+									<span class="input-group-text"><i class="fas fa-user"></i></span>
+								</div>
+								{{form.username}}
 							</div>
-							{{form.username}}
-						</div>
-						<div class="input-group mb-2">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
+							<div class="input-group mb-2">
+								<div class="input-group-append">
+									<span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
+								</div>
+								{{form.email}}
 							</div>
-							{{form.email}}
-						</div>
-						<div class="input-group mb-2">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
+							<div class="input-group mb-2">
+								<div class="input-group-append">
+									<span class="input-group-text"><i class="fas fa-key"></i></span>
+								</div>
+								{{form.password1}}
 							</div>
-							{{form.password1}}
-						</div>
-						<div class="input-group mb-2">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
+							<div class="input-group mb-2">
+								<div class="input-group-append">
+									<span class="input-group-text"><i class="fas fa-key"></i></span>
+								</div>
+								{{form.password2}}
 							</div>
-							{{form.password2}}
+	
+	
+	
+							   <div class="d-flex justify-content-center mt-3 login_container">
+								 <input class="btn login_btn" type="submit" value="Register Account">
+							   </div>
+	
+						</form>
+					</div>
+	
+					{{form.errors}}
+					
+					<div class="mt-4">
+						<div class="d-flex justify-content-center links">
+							Already have an account? <a class="anchor" href="{% url 'login' %}" class="ml-2">Login</a>
 						</div>
-
-
-
-				   		<div class="d-flex justify-content-center mt-3 login_container">
-				 			<input class="btn login_btn" type="submit" value="Register Account">
-				   		</div>
-
-					</form>
-				</div>
-
-				{{form.errors}}
-				
-				<div class="mt-4">
-					<div class="d-flex justify-content-center links">
-						Already have an account? <a href="{% url 'login' %}" class="ml-2">Login</a>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+    </section>
+
+  </main><!-- End #main -->
+
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-md-6 footer-newsletter">
+            <img src=" {% static 'assets/img/about.jpg' %} " class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="footer-info">
+              <h3>VFC<span>.</span></h3>
+              <p>
+                123 Gandhipuram <br>
+                Coimbatore, INDIA<br><br>
+                <strong>Phone:</strong> +91 9876543210<br>
+                <strong>Email:</strong> admin@vfc.in<br>
+              </p>
+              <div class="social-links mt-3">
+                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-md-6 footer-links">
+            <h4>Our Services</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="../main#portfolio">Movies</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="../main#portfolio">Short Films</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="../main#portfolio">Documentary Films</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="../main#cta">Trailer</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="../main#cta">Teasers</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-4 col-md-6 footer-newsletter">
+            <h4>Our Newsletter</h4>
+            <p>Subscribe to our newsletter for free!</p>
+            <form action="" method="post">
+              <input type="email" name="email" placeholder="Email address"><input type="submit" value="Subscribe">
+            </form>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong><span>VFC</span></strong>. All Rights Reserved
+      </div>
+      <div class="credits">
+        Designed by <a href="https://santhanabalan.ml/">Team VFC</a>
+      </div>
+    </div>
+  </footer><!-- End Footer -->
+
+  <div id="preloader"></div>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <!-- LOGIN PAGE VANNILA JS -->
+  <script>
+		var form_fields = document.getElementsByTagName('input')
+		form_fields[1].placeholder='Username..';
+		form_fields[2].placeholder='Email..';
+		form_fields[3].placeholder='Enter password...';
+		form_fields[4].placeholder='Re-enter Password...';
+
+
+		for (var field in form_fields){	
+		form_fields[field].className += ' form-control'
+		}
+  </script>
+  <!-- LOGIN PAGE VANNILA JS -->
+  <!-- Vendor JS Files -->
+  <script src=" {% static 'assets/vendor/purecounter/purecounter.js' %} "></script>
+  <script src=" {% static 'assets/vendor/aos/aos.js' %} "></script>
+  <script src=" {% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %} "></script>
+  <script src=" {% static 'assets/vendor/glightbox/js/glightbox.min.js' %} "></script>
+  <script src=" {% static 'assets/vendor/isotope-layout/isotope.pkgd.min.js' %} "></script>
+  <script src=" {% static 'assets/vendor/swiper/swiper-bundle.min.js' %} "></script>
+  <script src=" {% static 'assets/vendor/php-email-form/validate.js' %} "></script>
+
+  <!-- Template Main JS File -->
+  <script src=" {% static 'assets/js/main.js' %} "></script>
+
+</body>
+
+</html>
+
+<!-- 
 	<script>
 						/* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
 		//We start indexing at one because CSRF_token is considered and input field 
@@ -139,4 +337,4 @@
 		}
 	</script>
 </body>
-</html>
+</html> -->
