Final - BEFORE DB MIGRATION

--- a/crm1/accounts/templates/accounts/main.html
+++ b/crm1/accounts/templates/accounts/main.html
@@ -2,6 +2,17 @@
 
 <!DOCTYPE html>
 <html>
+<style>
+	.footer {
+		justify-content: center;
+		position: fixed;	
+		left: 0;
+		bottom: 0;
+		width: 100%;
+		color: black;
+		text-align: center;
+		}
+</style>
 <head>
 	<title>CRM</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -19,8 +30,10 @@
 	{% endblock %}
     </div>
 	<hr>
-	<h5>Our footer</h5>
-	
+	<div class="footer">
+		<h6>This site is for VFC Officials.</h6>
+		<h6>Copyright ©️<a href="https://santhanabalan.ml/" class="anchor">Team VFC</a></h6>
+	  </div>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
