--- a/crm1/accounts/templates/accounts/login.html
+++ b/crm1/accounts/templates/accounts/login.html
@@ -213,7 +213,10 @@
 			
 		</div>
     </section>
-
+    <div class="footer">
+      <h6>This site is for VFC Officials.</h6>
+      <h6>If you came here by accident you can return to <a href="../main/" class="anchor">Homepage</a></h6>
+    </div>
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
