--- a/crm1/accounts/templates/accounts/employee.html
+++ b/crm1/accounts/templates/accounts/employee.html
@@ -7,10 +7,10 @@
 <div class="row">
 	<div class="col-md">
 		<div class="card card-body">
-			<h5>Customer:</h5>
+			<h5>Employee:</h5>
 			<hr>
-			<a class="btn btn-outline-info  btn-sm btn-block" href="">Update Customer</a>
-			<a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'create_order' customer.id %}">Place Order</a>
+			<a class="btn btn-outline-info  btn-sm btn-block" href="">Update Employee</a>
+			<a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'create_task' employee.id %}">Place Task</a>
 
 		</div>
 	</div>
@@ -19,16 +19,16 @@
 		<div class="card card-body">
 			<h5>Contact Information</h5>
 			<hr>
-			<p>Email: {{customer.email}}</p>
-			<p>Phone: {{customer.phone}}</p>
+			<p>Email: {{employee.email}}</p>
+			<p>Phone: {{employee.phone}}</p>
 		</div>
 	</div>
 
 	<div class="col-md">
 		<div class="card card-body">
-			<h5>Total Orders</h5>
+			<h5>Total Tasks</h5>
 			<hr>
-			<h1 style="text-align: center;padding: 10px">{{order_count}}</h1>
+			<h1 style="text-align: center;padding: 10px">{{task_count}}</h1>
 		</div>
 	</div>
 </div>
@@ -56,24 +56,24 @@
 		<div class="card card-body">
 			<table class="table table-sm">
 				<tr>
-					<th>Product</th>
+					<th>GivenTask</th>
 					<th>Note</th>
-					<th>Date Orderd</th>
+					<th>Date Taskd</th>
 					<th>Status</th>
 					<th>Update</th>
 					<th>Remove</th>
 				</tr>
 
-				{% for order in orders %}
+				{% for task in tasks %}
 
 				<tr>
-					<td>{{order.product}}</td>
-					<td>{{order.note}}</td>
-					<td>{{order.date_created}}</td>
-					<td>{{order.status}}</td>
-					<td><a class="btn btn-sm btn-info" href="{% url 'update_order' order.id %}">Update</a></td>
+					<td>{{task.givenTask}}</td>
+					<td>{{task.note}}</td>
+					<td>{{task.date_created}}</td>
+					<td>{{task.status}}</td>
+					<td><a class="btn btn-sm btn-info" href="{% url 'update_task' task.id %}">Update</a></td>
 
-					<td><a class="btn btn-sm btn-danger" href="{% url 'delete_order' order.id %}">Delete</a></td>
+					<td><a class="btn btn-sm btn-danger" href="{% url 'delete_task' task.id %}">Delete</a></td>
 				</tr>
 				{% endfor %}
 
