--- a/crm1/accounts/templates/accounts/givenTask.html
+++ b/crm1/accounts/templates/accounts/givenTask.html
@@ -7,17 +7,17 @@
 		<div class="row">
 			<div class="col-md">
 				<div class="card card-body">
-					<h5>Products</h5>
+					<h5>GivenTasks</h5>
 				</div>
 				<div class="card card-body">
 					<table class="table">
 						<tr>
-							<th>Product</th>
+							<th>GivenTask</th>
 							<th>Category</th>
 							<th>Price</th>
 						</tr>
 
-						{% for i in products %}
+						{% for i in givenTasks %}
 							<tr>
 								<td>{{i.name}}</td>
 								<td>{{i.category}}</td>
