--- a/crm1/accounts/templates/accounts/status.html
+++ b/crm1/accounts/templates/accounts/status.html
@@ -5,10 +5,10 @@
 		<div class="col-md">
 			<div class="card text-center text-white  mb-3" id="total-orders">
 			  	<div class="card-header">
-			  		<h5 class="card-title">Total Orders</h5>
+			  		<h5 class="card-title">Total Tasks</h5>
 			  	</div>
 			  	<div class="card-body">
-			    	<h3 class="card-title">{{total_orders}}</h3>
+			    	<h3 class="card-title">{{total_tasks}}</h3>
 			  	</div>
 			</div>
 		</div>
@@ -18,7 +18,7 @@
 		<div class="col-md">
 			<div class="card text-center text-white  mb-3" id="orders-delivered">
 			  	<div class="card-header">
-			  		<h5 class="card-title">Orders Delivered</h5>
+			  		<h5 class="card-title">Tasks Delivered</h5>
 			  	</div>
 			  	<div class="card-body">
 			    	<h3 class="card-title">{{delivered}}</h3>
@@ -31,7 +31,7 @@
 		<div class="col-md">
 			<div class="card text-center text-white  mb-3" id="orders-pending">
 			  	<div class="card-header">
-			  		<h5 class="card-title">Orders Pending</h5>
+			  		<h5 class="card-title">Tasks Pending</h5>
 			  	</div>
 			  	<div class="card-body">
 			    	<h3 class="card-title">{{pending}}</h3>
