--- a/crm1/accounts/templates/accounts/employee.html
+++ b/crm1/accounts/templates/accounts/employee.html
@@ -10,7 +10,7 @@
 			<h5>Employee:</h5>
 			<hr>
 			<a class="btn btn-outline-info  btn-sm btn-block" href="">Update Employee</a>
-			<a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'create_task' employee.id %}">Place Task</a>
+			<a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'create_task' employee.id %}">Give Task</a>
 
 		</div>
 	</div>
