--- a/crm1/accounts/templates/accounts/givenTasks.html
+++ b/crm1/accounts/templates/accounts/givenTasks.html
@@ -27,6 +27,23 @@
 						
 					</table>
 				</div>
+				<div class="card card-body">
+					<h5>Budget Fixing</h5>
+				</div>
+				<div class="card card-body">
+					<table class="table">
+						<tr>
+							<th>Total Budget</th>
+							<th>Current Budget</th>
+							<th>Remaining Budget</th>
+						</tr>
+						<tr>
+							<td>{{total_price.price}}</td>
+							<td>{{current_price.price__sum}}</td>
+							<td>{{remaining.remaining}}</td>
+						</tr>
+					</table>
+				</div>
 			</div>
 			
 		</div>
