--- a/crm1/accounts/templates/accounts/dashboard.html
+++ b/crm1/accounts/templates/accounts/dashboard.html
@@ -32,7 +32,7 @@
 	</div>
 
 	<div class="col-md-7">
-		<h5>LAST 5 TASKSS</h5>
+		<h5>LAST 5 TASKS</h5>
 		<hr>
 		<div class="card card-body">
 			
