--- a/crm1/accounts/templates/accounts/status.html
+++ b/crm1/accounts/templates/accounts/status.html
@@ -18,10 +18,10 @@
 		<div class="col-md">
 			<div class="card text-center text-white  mb-3" id="orders-delivered">
 			  	<div class="card-header">
-			  		<h5 class="card-title">Tasks Delivered</h5>
+			  		<h5 class="card-title">Tasks Completed</h5>
 			  	</div>
 			  	<div class="card-body">
-			    	<h3 class="card-title">{{delivered}}</h3>
+			    	<h3 class="card-title">{{completed}}</h3>
 			  	</div>
 			</div>
 		</div>
