--- a/crm1/main/templates/main/index.html
+++ b/crm1/main/templates/main/index.html
@@ -275,7 +275,7 @@
           <h3>Jasper Trailer</h3>          
         </div>
         <div>
-          <iframe width="1280" height="720" src="https://www.youtube.com/embed/2CZDfbx_ivc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100%" height="720" src="https://www.youtube.com/embed/2CZDfbx_ivc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="text-center">         
           <a class="cta-btn" href="https://www.youtube.com/embed/2CZDfbx_ivc">Watch on YouTube</a>
@@ -398,8 +398,8 @@
                 </div>
               </div>
             </div> End .content-->
-          </div>
-        </div>
+          <!-- </div>
+        </div> -->
 
       </div>
     </section><!-- End Counts Section -->
@@ -413,7 +413,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src=" {% static 'assets/img/testimonials/testimonials-1.jpg' %} " class="testimonial-img" alt="">
+                <img src=" {% static 'assets/img/testimonials/testimonials-1.jpeg' %} " class="testimonial-img" alt="">
                 <h3>Vishnuvardhan M</h3>
                 <h4>Ceo &amp; Founder</h4>
                 <p>
@@ -426,7 +426,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src=" {% static 'assets/img/testimonials/testimonials-2.jpg' %} " class="testimonial-img" alt="">
+                <img src=" {% static 'assets/img/testimonials/testimonials-2.jpeg' %} " class="testimonial-img" alt="">
                 <h3>Santhanabalan</h3>
                 <h4>Product Manager</h4>
                 <p>
@@ -439,8 +439,8 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src=" {% static 'assets/img/testimonials/testimonials-3.jpg' %} " class="testimonial-img" alt="">
-                <h3>Prasanna Raj</h3>
+                <img src=" {% static 'assets/img/testimonials/testimonials-3.jpeg' %} " class="testimonial-img" alt="">
+                <h3>Vishist Raam</h3>
                 <h4>Movie reviewer</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -470,7 +470,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <img src=" {% static 'assets/img/team/team-1.jpg' %} " class="img-fluid" alt="">
+                <img src=" {% static 'assets/img/team/team-1.jpeg' %} " class="img-fluid" alt="">
                 <div class="social">
                   <a href=" {% static '' %} "><i class="bi bi-twitter"></i></a>
                   <a href=" {% static '' %} "><i class="bi bi-facebook"></i></a>
@@ -488,7 +488,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
-                <img src=" {% static 'assets/img/team/team-2.jpg' %} " class="img-fluid" alt="">
+                <img src=" {% static 'assets/img/team/team-2.jpeg' %} " class="img-fluid" alt="">
                 <div class="social">
                   <a href=" {% static '' %} "><i class="bi bi-twitter"></i></a>
                   <a href=" {% static '' %} "><i class="bi bi-facebook"></i></a>
@@ -506,7 +506,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src=" {% static 'assets/img/team/team-3.jpg' %} " class="img-fluid" alt="">
+                <img src=" {% static 'assets/img/team/team-3.jpeg' %} " class="img-fluid" alt="">
                 <div class="social">
                   <a href=" {% static '' %} "><i class="bi bi-twitter"></i></a>
                   <a href=" {% static '' %} "><i class="bi bi-facebook"></i></a>
@@ -524,7 +524,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
-                <img src=" {% static 'assets/img/team/team-4.jpg' %} " class="img-fluid" alt="">
+                <img src=" {% static 'assets/img/team/team-4.jpeg' %} " class="img-fluid" alt="">
                 <div class="social">
                   <a href=" {% static '' %} "><i class="bi bi-twitter"></i></a>
                   <a href=" {% static '' %} "><i class="bi bi-facebook"></i></a>
@@ -554,7 +554,7 @@
         </div>
 
         <div>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
+          <iframe src="https://www.google.com/maps/d/embed?mid=1-8JS986P2gNlyKx6H8RsEtEX85A&ehbc=2E312F" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="row mt-5">
