--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -124,26 +124,19 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-lg-between">
 
-      <h1 class="logo me-auto me-lg-0"><a href=" {% static 'index.html' %} ">VFC<span>.</span></a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="../main#hero">VFC<span>.</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href=" {% static 'index.html' %} " class="logo me-auto me-lg-0"><img src=" {% static 'assets/img/logo.png' %} " alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto " href=" {% static 'home.html#hero' %} ">Home</a></li>
-          <li><a class="nav-link scrollto" href=" {% static 'home.html#about' %} ">About</a></li>
-          <li><a class="nav-link scrollto" href=" {% static 'home.html#services' %} ">Services</a></li>
-          <li><a class="nav-link scrollto " href=" {% static 'home.html#portfolio' %} ">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href=" {% static 'home.html#team' %} ">Team</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a class="nav-link scrollto active" href="../main#hero">Home</a></li>
-              <li><a class="nav-link scrollto" href="../main#about">About</a></li>
-              <li><a class="nav-link scrollto" href="../main#cta">Whats New!</a></li>
-              <li><a class="nav-link scrollto " href="../main#portfolio">Movies</a></li>
-              <li><a class="nav-link scrollto" href="../main#team">Team</a></li>
-              <li><a class="nav-link scrollto" href="../main#contact">Contact</a></li>
-            </ul>
+          <li><a class="nav-link scrollto active" href="../main#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="../main#about">About</a></li>
+          <li><a class="nav-link scrollto" href="../main#cta">Whats New!</a></li>
+          <li><a class="nav-link scrollto " href="../main#portfolio">Movies</a></li>
+          <li><a class="nav-link scrollto" href="../main#team">Team</a></li>
+          <li><a class="nav-link scrollto" href="../main#contact">Contact</a></li>
+        </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
