--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -35,7 +35,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-lg-between">
 
-      <h1 class="logo me-auto me-lg-0"><a href=" {% static 'index.html' %} ">VFC<span>.</span></a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href=" {% url 'main' %} ">VFC<span>.</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href=" {% static 'index.html' %} " class="logo me-auto me-lg-0"><img src=" {% static 'assets/img/logo.png' %} " alt="" class="img-fluid"></a>-->
 
@@ -176,7 +176,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="row">
-          <div class="image col-lg-6" style='background-image: url(" {% static 'assets/img/skr.jpg' %} ");' data-aos="fade-right"></div>
+          <div class="image col-lg-6" style='background-image: url(" {% static 'assets/img/skr.jpg' %}");' data-aos="fade-right"></div>
           <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
             <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
               <i class="bx bx-receipt"></i>
